<resources>
    <string name="app_name">ATM Study</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">email@ficticio.com</string>

    <string name="menu_home">Inicial</string>
    <string name="menu_services">Serviços</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_contacts">Contatos</string>
    <string name="menu_infos">Infos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>